mealie/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mealie
  namespace: mealie
  labels:
    app: mealie
spec:
  replicas: 1
  revisionHistoryLimit: 3
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: mealie
  template:
    metadata:
      labels:
        app: mealie
    spec:
      securityContext:
        fsGroup: 1000
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      nodeSelector:
        storage: longhorn
      containers:
        - name: mealie
          image: docker.io/hkotel/mealie:v3.28.0
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            runAsUser: 1000
            capabilities:
              drop:
              - ALL
          ports:
            - containerPort: 9000
              name: web
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /app/data
        - name: flaresolverr
          image: docker.io/flaresolverr/flaresolverr:v3.5.2
          securityContext:
            allowPrivilegeEscalation: false
            runAsUser: 1000
            runAsNonRoot: true
            capabilities:
              drop:
              - ALL
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: mealie
