mealie/service.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mealie
  name: mealie
  namespace: mealie
spec:
  selector:
    app: mealie
  ports:
    - name: web
      port: 9000
      protocol: TCP
      targetPort: 9000
