mealie/ingress.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mealie
  namespace: default
spec:
  ingressClassName: traefik-external
  entryPoints:
    - websecure
  routes:
    - match: Host(`mealie.mandariini.uk`)
      kind: Rule
      services:
        - name: mealie
          namespace: mealie
          port: 9000
  tls:
    secretName: mandariini-uk-tls
