mealie/networkpolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: intra-namespace
  namespace: mealie
spec:
  podSelector: {}
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: mealie
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-mealie-server
  namespace: mealie
spec:
  podSelector:
    matchLabels:
      app: mealie
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - port: 9000
          protocol: TCP
